Stop branding and menu from wrapping onto a new line.

--- a/resources/scss/components/_app-header.scss
+++ b/resources/scss/components/_app-header.scss
@@ -5,7 +5,6 @@
 	&__wrapper {
 		align-items: center;
 		display: flex;
-		flex-wrap: wrap;
 		justify-content: space-between;
 	}
 
